# MultiMalloc

./: Makefile.am  README.md  configure.ac
src/: Makefile.am  libmmalloc.c  mmalloc.c  mmalloc.h  mmalloc.pc.in
